# hsdaoh

./: .gitignore  71-hsdaoh.rules  CMakeLists.txt  README.md  hsdaoh.rules  libhsdaoh.pc.in
cmake/: hsdaohConfig.cmake
cmake/Modules/: FindCRCFAST.cmake  Version.cmake
include/: CMakeLists.txt  crc.h  crc_simd.h  format_convert.h  hsdaoh.h  hsdaoh_export.h  hsdaoh_i2c.h  hsdaoh_private.h
src/: CMakeLists.txt  crc16speed.c  crc_simd.c  format_convert.c  hsdaoh.rc.in  hsdaoh_file.c  hsdaoh_tcp.c  hsdaoh_test.c  libhsdaoh.c
